--- a/src/app/modules/operation/allocate/allocate.component.html
+++ b/src/app/modules/operation/allocate/allocate.component.html
@@ -52,42 +52,16 @@
                   data-bs-parent="#accordionFlushExample">
                   <div class="row accordion-body">
                     <div class="container-fluid overflow-hidden">
-                      <div class="row g-1">
-                        <div class="col-4">
-                          <div class="w-100 h-100 p-1  bg-info bg-opacity-10">
-                            <p class="font-blue-light-xs"><b>TRUCK</b></p>
-                            <p class="font-blue-light-xs">Tipo de Transporte</p>
-                          </div>
+                      <div class="row g-1 mt-2 bg-light">
+                        <div class="col-6">
+                          <p class="font-blue-light-small mb-0"><b>GUIA 0000000001</b></p>
+                          <p class="font-blue-light-small mb-1">CIUDAD | ZONA</p>
                         </div>
-                        <div class="col-4">
-                          <div class="w-100 h-100 p-1 bg-info bg-opacity-10">
-                            <p class="font-blue-light-xs"><b>Medellín</b></p>
-                            <p class="font-blue-light-xs">Salida</p>
-                          </div>
+                        <div class="col-3 align-items-center">
+                          <button type="button" class="btn btn-blue"><b class="font-black-xxs">Asignar</b></button>
                         </div>
-                        <div class="col-4">
-                          <div class="w-100 h-100 p-1 bg-info bg-opacity-10">
-                            <p class="font-blue-light-xs"><b>Bogotá</b></p>
-                            <p class="font-blue-light-xs">Destino</p>
-                          </div>
-                        </div>
-                        <div class="col-4">
-                          <div class="w-100 h-100 p-1 bg-info bg-opacity-10">
-                            <p class="font-blue-light-xs"><b>00/00/0000</b></p>
-                            <p class="font-blue-light-xs">Fecha Salida</p>
-                          </div>
-                        </div>
-                        <div class="col-4">
-                          <div class="w-100 h-100 p-1 bg-info bg-opacity-10">
-                            <p class="font-blue-light-xs"><b>24k</b></p>
-                            <p class="font-blue-light-xs">Total Asignados</p>
-                          </div>
-                        </div>
-                        <div class="col-4">
-                          <div class="w-100 h-100 p-1 bg-info bg-opacity-10">
-                            <p class="font-blue-light-xs"><b>001</b></p>
-                            <p class="font-blue-light-xs">Prioridad</p>
-                          </div>
+                        <div class="col-3">
+                          <button type="button" class="btn btn-orange"><b class="font-white-xxs">Ver Guía</b></button>
                         </div>
                       </div>
                     </div>
@@ -146,7 +120,7 @@
                 <p class="font-blue-light-medium">CIUDAD | ZONA</p>
               </div>
               <div class="col-3 align-items-center">
-                <button type="button" class="btn btn-blue"><b class="font-white-xs">Asignar</b></button>
+                <button type="button" class="btn btn-blue"><b class="font-black-xs">Asignar</b></button>
               </div>
               <div class="col-3">
                 <button type="button" class="btn btn-orange"><b class="font-white-xs">Ver Guía</b></button>
