--- a/src/app/modules/operation/allocate/allocate.component.css
+++ b/src/app/modules/operation/allocate/allocate.component.css
@@ -23,6 +23,21 @@
   font-size: x-small;
 }
 
+.font-white-xxs {
+  color: white;
+  font-size:xx-small;
+}
+
+.font-black-xs {
+  color: black;
+  font-size: x-small;
+}
+
+.font-black-xxs {
+  color: black;
+  font-size:xx-small;
+}
+
 .font-blue-light-xs {
   color: #2b91f1;
   font-size:x-small;
@@ -60,7 +75,7 @@
 }
 
 .btn-blue{
-  background-color: #2b91f1;
+  background-color: #BEDEF5;
 }
 
 
